# SIN-Code-Ephemeral-Full-Stack-Mocking-Orchestration

./: AGENTS.md  CONTRIBUTING.md  INSTALL.md  README.md  SKILL.md  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: CONFIGURATION.md  USAGE.md
src/efm/: __init__.py  cli.doc.md  cli.py  config.doc.md  config.py  db_mock.doc.md  db_mock.py  http_mock.doc.md  http_mock.py  process.doc.md  process.py
src/sin_code_efsm/: __init__.py  __init__.py.doc.md  cli.py  cli.py.doc.md  docker.doc.md  docker.py  docker.py.doc.md  mcp_server.doc.md  mcp_server.py  mcp_server.py.doc.md  mock_generator.py  mock_generator.py.doc.md  orchestrator.py  orchestrator.py.doc.md  sandbox.py  sandbox.py.doc.md  server.py  server.py.doc.md  stack.doc.md  stack.py  stack.py.doc.md  state.py  state.py.doc.md
src/sin_code_efsm/services/: __init__.py  __init__.py.doc.md  auth.doc.md  auth.py  auth.py.doc.md  base.doc.md  base.py  base.py.doc.md  database.doc.md  database.py  database.py.doc.md  http.doc.md  http.py  http.py.doc.md  queue.doc.md  queue.py  queue.py.doc.md  storage.doc.md  storage.py  storage.py.doc.md
tests/: test_efm.py  test_efsm.py  test_orchestrator.py
tests/fixtures/: mock_config.yaml
