[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sin-code-efsm"
version = "0.1.0"
description = "Ephemeral Full-Stack Mocking Orchestration"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
efsm = "sin_code_efsm.cli:app"
