[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efm"
version = "0.1.0"
description = "Ephemeral Full-Stack Mocking — quickly spin up mock HTTP APIs and SQLite databases for testing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "pyyaml>=6.0",
    "typer>=0.9",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.2"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[project.scripts]
efm = "efm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
